--- a/HW2/aboutme.html
+++ b/HW2/aboutme.html
@@ -1,11 +1,16 @@
 <html>   
     <head>
     </head>
+    <style>
+        p {
+  color: red;
+}
+
+    </style>
     <body>
     <h1><strong>陳彥辰的個人網頁</strong></h1>
     <p>金門大學學生</p>
     <a href="https://www.facebook.com/chen.mike.737">我的Facebook</a><br>
     <img src="tenor.gif"/>
-
     </body>
 </html>
