--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -1,5 +1,95 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        /* 重設一些基本樣式 */
+html {
+    box-sizing: border-box;
+  }
+  
+  *, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* 設置基本字體樣式 */
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+  }
+  
+  /* 設置標題樣式 */
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+    margin: 1rem 0;
+  }
+  
+  h1 {
+    font-size: 2rem;
+  }
+  
+  h2 {
+    font-size: 1.5rem;
+  }
+  
+  h3 {
+    font-size: 1.17rem;
+  }
+  
+  /* 設置段落樣式 */
+  p {
+    margin: 1rem 0;
+  }
+  
+  /* 設置連結樣式 */
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  /* 設置按鈕樣式 */
+  button, input[type="submit"] {
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  button:hover, input[type="submit"]:hover {
+    background-color: #0069d9;
+  }
+  
+  /* 設置表格樣式 */
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+  }
+  
+  th {
+    font-weight: bold;
+    text-align: left;
+  }
+  
+  /* 設置圖片樣式 */
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1rem 0;
+  }
+    </style>
 <head>
 <link rel="stylesheet" href="my.css"/>
 </head>
