--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -18,6 +18,8 @@ html {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
+    width: 500px;
+  margin: 0 auto;
   }
   
   /* 設置標題樣式 */
