--- a/期末網站/期末.html
+++ b/期末網站/期末.html
@@ -14,24 +14,25 @@
         <ul class="conteudo__menu--listagem" data-offset="10">
             <li class="conteudo__menu--listagem-item" data-offset="20" onclick>
                 Início
-                <span class="texto__mascara"><span>這是</span></span>
-                <span class="texto__mascara"><span>這是</span></span>
+                <span class="texto__mascara"><span>111010523</span></span>
+                <span class="texto__mascara"><span>111010523</span></span>
             </li>
             <li class="conteudo__menu--listagem-item" data-offset="16" onclick>
                 Sobre
-                <span class="texto__mascara"><span>酷炫的</span></span>
-                <span class="texto__mascara"><span>酷炫的</span></span>
+                <span class="texto__mascara"><span>資工二</span></span>
+                <span class="texto__mascara"><span>資工二</span></span>
             </li>
             <li class="conteudo__menu--listagem-item" data-offset="12" onclick>
                 Projetos
-                <span class="texto__mascara"><span>網站</span></span>
-                <span class="texto__mascara"><span>網站</span></span>
+                <span class="texto__mascara"><span>陳彥辰</span></span>
+                <span class="texto__mascara"><span>陳彥辰</span></span>
             </li>
             <li class="conteudo__menu--listagem-item" data-offset="8" onclick>
                 Contato
-                <span class="texto__mascara"><span>範本</span></span>
-                <span class="texto__mascara"><span>範本</span></span>
+                <span class="texto__mascara"><span>期末</span></span>
+                <span class="texto__mascara"><span>期末</span></span>
             </li>
+            <a class="nav-link" href="https://github.com/mikeychen1205/programador.cs-reels">來源</a>
         </ul>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
